--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -49,7 +49,7 @@
   width: 100%;
   display: flex;
   gap: var(--sbb-spacing-fixed-2x);
-  padding-block: var(--sbb-spacing-fixed-1x);
+  padding-block: var(--sbb-spacing-fixed-2x);
 }
 
 .sbb-slider__container {
@@ -137,7 +137,9 @@
 // slider knob resize on click (active / focus)
 .sbb-slider__range-input:active ~ .sbb-slider__knob,
 .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob {
-  @include focusOutline;
-
   --sbb-slider-knob-size: #{px-to-rem-build(31)};
+}
+
+.sbb-slider__range-input:focus-visible ~ .sbb-slider__knob {
+  @include focusOutline;
 }
