--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -10,6 +10,10 @@
   --sbb-menu-animation-easing: ease;
   --sbb-menu-max-width: 100%;
   --sbb-menu-min-width: 100%;
+
+  // 85vh is not an exact value but looks optimized for mobile view.
+  --sbb-menu-max-height: calc(85vh - var(--sbb-spacing-fixed-8x));
+  --sbb-menu-min-height: #{px-to-rem-build(120)};
   --sbb-menu-border-radius: var(--sbb-border-radius-4x);
   --sbb-menu-backdrop-color: transparent;
 
@@ -68,8 +72,10 @@
 .sbb-menu {
   --sbb-menu-transform: translateY(100%);
 
-  // 90vh is not an exact value but looks optimized for mobile view.
-  max-height: calc(90vh - var(--sbb-spacing-fixed-8x));
+  display: block;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
   max-width: var(--sbb-menu-max-width);
   min-width: var(--sbb-menu-min-width);
   text-align: start;
@@ -86,6 +92,9 @@
   overflow: hidden;
 
   &[open] {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
     animation: {
       name: show;
       duration: var(--sbb-menu-animation-duration);
@@ -118,10 +127,12 @@
     &[open] {
       top: var(--sbb-menu-position-y);
       left: var(--sbb-menu-position-x);
-      max-height: max(120px, var(--sbb-menu-max-height));
+      max-height: var(--sbb-menu-max-height);
+      min-height: var(--sbb-menu-min-height);
 
       .sbb-menu__content {
-        max-height: max(120px, var(--sbb-menu-max-height));
+        max-height: var(--sbb-menu-max-height);
+        min-height: var(--sbb-menu-min-height);
       }
     }
   }
@@ -130,7 +141,7 @@
 .sbb-menu__content {
   @include scrollbar-dark;
 
-  max-height: calc(90vh - var(--sbb-spacing-fixed-8x));
+  max-height: var(--sbb-menu-max-height);
   padding-block: var(--sbb-spacing-fixed-1x);
   overflow: auto;
   outline: none;
@@ -151,9 +162,6 @@
   }
 }
 
-// It is necessary to use animations with keyframes instead of transitions in order not to alter
-// the default `display: block` of the modal otherwise it causes several problems,
-// especially for accessibility.
 @keyframes show {
   from {
     visibility: hidden;
