fix: divider with in sbb-menu

--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -57,7 +57,7 @@
 }
 
 // stylelint-disable plugin/stylelint-bem-namics
-::slotted(:not(sbb-menu-action)) {
+::slotted(:not(sbb-menu-action, sbb-divider)) {
   display: block;
   padding-inline: var(--sbb-spacing-fixed-5x);
 }
