refactor(sbb-divider): move styles to inner element (#1445)

--- a/src/components/sbb-divider/sbb-divider.scss
+++ b/src/components/sbb-divider/sbb-divider.scss
@@ -7,15 +7,21 @@
   --sbb-divider-border-width: var(--sbb-border-width-1x);
 }
 
+:host([orientation='vertical']) {
+  height: 100%;
+}
+
 :host([negative]) {
   --sbb-divider-color: var(--sbb-color-iron-default);
 }
 
-:host([orientation='horizontal']) {
-  border-top: var(--sbb-divider-border-width) solid var(--sbb-divider-color);
-}
+.sbb-divider {
+  :host([orientation='horizontal']) & {
+    border-top: var(--sbb-divider-border-width) solid var(--sbb-divider-color);
+  }
 
-:host([orientation='vertical']) {
-  height: 100%;
-  border-left: var(--sbb-divider-border-width) solid var(--sbb-divider-color);
+  :host([orientation='vertical']) & {
+    height: 100%;
+    border-left: var(--sbb-divider-border-width) solid var(--sbb-divider-color);
+  }
 }
