--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -11,7 +11,7 @@
   --checkbox-border-radius: #{px-to-rem-build(4)};
 }
 
-.sbb-checkbox--disabled {
+:host([disabled]) {
   --checkbox-color: var(--sbb-color-graphite-default);
   --checkbox-border-color: var(--sbb-color-graphite-default);
   --checkbox-selection-color: var(--sbb-color-graphite-default);
@@ -86,11 +86,6 @@ input[type='checkbox'] {
 
 .sbb-checkbox__label--start {
   flex-direction: row-reverse;
-}
-
-.sbb-checkbox__label--space {
-  width: 100%;
-  justify-content: space-between;
 }
 
 input[type='checkbox']:focus-visible + .checkbox__inner {
