style: add checkbox mixin

--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -61,18 +61,7 @@
 }
 
 input[type='checkbox'] {
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  margin: 0;
-  right: 0;
-  bottom: 0;
-  cursor: inherit;
-
-  // Puts the element behind the parent while keeping it visible so that
-  // it allows `click` events to propagate up.
-  z-index: -1;
+  @include hiddenCheckbox;
 }
 
 .toggle-check__container {
