--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -34,18 +34,7 @@
 }
 
 input[type='checkbox'] {
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  cursor: inherit;
-
-  // Puts the element behind the parent while keeping it visible so that
-  // it allows `click` events to propagate up.
-  z-index: -1;
+  @include hiddenCheckbox;
 }
 
 .sbb-checkbox__selection {
