refactor(sbb-menu): improve menu events and positioning (#1430)

--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -8,12 +8,12 @@
   --sbb-menu-position-y: 0;
   --sbb-menu-animation-duration: var(--sbb-animation-duration-6x);
   --sbb-menu-animation-easing: ease;
+  --sbb-menu-max-width: 100%;
+  --sbb-menu-min-width: 100%;
 
   // 85vh is not an exact value but looks optimized for mobile view.
   --sbb-menu-max-height: calc(85vh - var(--sbb-spacing-fixed-8x));
   --sbb-menu-min-height: #{px-to-rem-build(120)};
-  --sbb-menu-max-width: 100%;
-  --sbb-menu-min-width: 100%;
   --sbb-menu-border-radius: var(--sbb-border-radius-4x);
   --sbb-menu-backdrop-color: transparent;
 
@@ -72,8 +72,10 @@
 .sbb-menu {
   --sbb-menu-transform: translateY(100%);
 
-  max-height: var(--sbb-menu-max-height);
-  min-height: var(--sbb-menu-min-height);
+  display: block;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
   max-width: var(--sbb-menu-max-width);
   min-width: var(--sbb-menu-min-width);
   text-align: start;
@@ -90,6 +92,9 @@
   overflow: hidden;
 
   &[open] {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
     animation: {
       name: show;
       duration: var(--sbb-menu-animation-duration);
@@ -112,21 +117,29 @@
     --sbb-menu-max-width: #{px-to-rem-build(320)};
     --sbb-menu-min-width: #{px-to-rem-build(180)};
 
-    top: var(--sbb-menu-position-y);
-    left: var(--sbb-menu-position-x);
+    top: 0;
+    left: 0;
     right: unset;
     bottom: unset;
+    max-height: fit-content;
     border-radius: var(--sbb-menu-border-radius);
+
+    &[open] {
+      top: var(--sbb-menu-position-y);
+      left: var(--sbb-menu-position-x);
+      max-height: var(--sbb-menu-max-height);
+      min-height: var(--sbb-menu-min-height);
+    }
   }
 }
 
 .sbb-menu__content {
   @include scrollbar-dark;
 
-  outline: none;
   max-height: var(--sbb-menu-max-height);
   padding-block: var(--sbb-spacing-fixed-1x);
   overflow: auto;
+  outline: none;
 
   // Margin bottom in mobile variant
   &::after {
@@ -136,7 +149,12 @@
   }
 
   @include mq($from: medium) {
-    min-height: var(--sbb-menu-min-height);
+    max-height: fit-content;
+
+    .sbb-menu[open] & {
+      max-height: var(--sbb-menu-max-height);
+      min-height: var(--sbb-menu-min-height);
+    }
 
     &::after {
       display: none;
@@ -144,9 +162,6 @@
   }
 }
 
-// It is necessary to use animations with keyframes instead of transitions in order not to alter
-// the default `display: block` of the modal otherwise it causes several problems,
-// especially for accessibility.
 @keyframes show {
   from {
     visibility: hidden;
