--- a/src/components/sbb-dialog/sbb-dialog.scss
+++ b/src/components/sbb-dialog/sbb-dialog.scss
@@ -164,7 +164,7 @@
 .sbb-dialog__header {
   display: flex;
   gap: var(--sbb-spacing-fixed-6x);
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
   padding-inline: var(--sbb-dialog-padding-inline);
   padding-block: var(--sbb-dialog-header-padding-block);
@@ -187,6 +187,7 @@
 .sbb-dialog__title {
   flex: 1;
   overflow: hidden;
+  align-self: center;
 }
 
 .sbb-dialog__content {
